<resources>
    <string name="app_name">Capstone - Robert Klare</string>
    <string name="coaching_companion">Coaching Companion:</string>
    <string name="youth_roster_manager">Youth Roster Manager</string>
    <string name="pick_ups">Pick-Ups</string>
    <string name="search">Search</string>
    <string name="select_a_team">Select a Team:</string>
    <string name="add_a_new_team">Add a New Team!</string>
    <string name="add_your_new_team">Add Your New Team:</string>
    <string name="back_to_home">Back To Home</string>
    <string name="save_team_info">Save Team Info</string>
    <string name="team_name">Team Name:</string>
    <string name="age_group">Age Group:</string>
    <string name="enter_your_new_team_name">Enter New Team Name</string>
    <string name="or">OR:</string>
...
